@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20180530] [svn: r775]
+Changelog for sg3_utils-1.43 [20180531] [svn: r776]
   - sg_write_x: where x can be normal, atomic, or(write),
     same, scattered, or stream writes with 16 or 32 byte
     cdbs (sbc4r04 for atomic, sbc4r11 for scattered)
@@ -83,6 +83,8 @@ Changelog for sg3_utils-1.43 [20180530] [svn: r775]
   - sg_vpd: 3 party copy VPD page improvements
     - fully implement Device constituents VPD page
     - improve handling of unknown pages
+  - sg_dd: add --dry-run and --verbose options
+    - allow multiple short options (e.g. -dvv )
   - sg_reassign+sg_write_same: fix ULONG_MAX problem
   - sg_rdac: add sanity checks for -f=lun value
   - sg_turs+sg_requests: make both accept '--num=NUM'
